apps/base/guacamole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/part-of: guacamole
