apps/base/guacamole/guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: guacamole
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: guacamole
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
